# first_package_by_shibilicv

./: setup.cfg
src/addition/: addition_by_three.py
src/divide/: divide_by_three.py
src/multiply/: multiply_by_three.py
src/subtraction/: subtraction_by_three.py
tests/: test_addition_by_three.py  test_divide_by_three.py  test_multiply_by_three.py  test_subtraction_by_three.py
