[metadata]
name = first_package_by_shibilicv
version = 1.0.0
author = Mohammed Shibili cv
author_email = mohdshibilicv@gmail.com
description = A simple Python package that allows to add, subtract, multiply, and divide by three
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/mohd-shibilicv/first_package_by_shibilicv
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src